[package]
name = "phoner"
version = "0.1.0"
edition = "2021"
description = "A CLI to query mobile region."
readme = "README.md"
license = "MIT"
repository = "https://github.com/bujnlc8/phoner"
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
colored = "2.1.0"
tokio = { version = "1.39.2", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "charset", "json"], default-features=false}

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true
