[package]
name = "phonerr"
version = "0.1.2"
edition = "2021"
description = "A CLI to query mobile phone region."
readme = "README.md"
license = "MIT"
repository = "https://github.com/bujnlc8/phoner"
categories = ["command-line-utilities"]

[[bin]]
name = "phoner"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
colored = "2.1.0"
tokio = { version = "1.39.2", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "charset", "json"], default-features=false}
indicatif = { version = "0.17.8", optional = true }

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true

[features]
download-progress = ["indicatif"]
indicatif = ["dep:indicatif"]
